<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_settings_timetable_importation"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_settings_file_location"
        android:paddingHorizontal="15dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:paddingHorizontal="15dp"
        android:text="@string/fragment_settings_warning"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/fragment_settings_import_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_settings_import_button"/>

    <View
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_settings_language_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/fragment_settings_choose_langague"/>

        <Spinner
            android:id="@+id/fragment_settings_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"></Spinner>

    </LinearLayout>

</LinearLayout>