<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="RX:"
                android:ellipsize="end"
                android:maxLines="1"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/fragment_bluetooth_readBuffer"
                android:id="@+id/fragment_bluetooth_readBuffer"
                android:layout_centerHorizontal="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="Status:"
                android:ellipsize="end"
                android:maxLines="1"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"

                android:text="@string/fragment_bluetooth_bluetoothStatus"
                android:id="@+id/fragment_bluetooth_bluetoothStatus"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@+id/checkboxLED1" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_bluetooth_scan"
            android:id="@+id/fragment_bluetooth_scan"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/fragment_bluetooth_off" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_bluetooth_off"
            android:id="@+id/fragment_bluetooth_off"
            android:layout_alignBottom="@+id/fragment_bluetooth_scan"
            android:layout_toEndOf="@+id/fragment_bluetooth_PairedBtn"
            android:layout_toRightOf="@+id/fragment_bluetooth_PairedBtn" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_bluetooth_PairedBtn"
            android:id="@+id/fragment_bluetooth_PairedBtn"
            android:layout_below="@+id/fragment_bluetooth_scan"
            android:layout_toStartOf="@+id/fragment_bluetooth_discover" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_bluetooth_discover"
            android:id="@+id/fragment_bluetooth_discover"
            android:layout_below="@+id/fragment_bluetooth_off" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_bluetooth_devicesListView"
            android:choiceMode="singleChoice"
            android:layout_below="@+id/fragment_bluetooth_PairedBtn"
            android:layout_alignRight="@+id/fragment_bluetooth_off"
            android:layout_alignEnd="@+id/fragment_bluetooth_off" />

    </LinearLayout>

</RelativeLayout>